Add heading and do some basic styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 :root {
+  --light-blue: #d6effc;
   --sky-blue: #b5e2fa;
   --dark-blue: #0a6291;
   --white: #f9f7f3;
   --black: #1e2019;
   --light-grey: #ececec;
-  --dark-grey: #BABABA;
+  --dark-grey: #bababa;
 }
 
 body {
