--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -1,5 +1,11 @@
 .display {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.display h2 {
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 1em 0 0;
 }
