--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Montserrat:ital,wght@0,400;0,500;0,600;1,500&display=swap');
+
 :root {
   --light-blue: #d6effc;
   --sky-blue: #b5e2fa;
   --dark-blue: #0a6291;
   --white: #f9f7f3;
   --black: #1e2019;
-  --light-grey: #ececec;
-  --dark-grey: #bababa;
+  --light-grey: #f0f0f0;
+  --grey: #bababa;
+  --dark-grey: #2e2e2e;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background: var(--sky-blue);
+  background: var(--light-blue);
   color: var(--black);
 }
 
