--- a/src/components/Flight/flight.css
+++ b/src/components/Flight/flight.css
@@ -3,13 +3,14 @@
   flex-direction: column;
 
   background: var(--white);
-  width: 60%;
+  width: 100%;
 
   margin: 2em;
   padding: 2em 4em;
 
   border: 1px solid var(--light-grey);
   border-radius: 0.75em;
+  box-shadow: 1em 1em 3em var(--dark-grey);
 
   color: var(--dark-grey);
 }
