--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -9,6 +9,7 @@
   padding: 3em;
 
   border-radius: 0.75em;
+  box-shadow: 1em 1em 3em var(--dark-grey);
 
   background: var(--white);
 }
@@ -21,6 +22,7 @@
 .form input[type='date'] {
   grid-row: 2;
   font-size: 1.1rem;
+  font-family: 'Montserrat', sans-serif;
   border-radius: 0.75em;
   padding: 0.8em;
 }
