Updated styling and added footer

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
 :root {
   --light-blue: #d6effc;
   --sky-blue: #b5e2fa;
-  --dark-blue: #0a6291;
-  --white: #f9f7f3;
+  --dark-blue: #0059df;
+  --v-dark-blue: #001e4a;
+  --white: #fdfcfa;
   --black: #1e2019;
   --light-grey: #f0f0f0;
   --grey: #bababa;
