--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,10 +13,20 @@
   font-size: 3rem;
   font-family: 'Bad Script', sans-serif;
   letter-spacing: 0.06em;
+  color: var(--v-dark-blue);
 }
 
 .subtitle {
   font-weight: 400;
   font-size: 1.2rem;
   font-style: italic;
+  color: var(--v-dark-blue);
+}
+
+footer {
+  background: var(--dark-blue);
+  margin-top: 3em;
+
+  height: 5vh;
+  width: 100%;
 }
