Add highlighting to available options on each flight

--- a/src/components/Flight/flight.css
+++ b/src/components/Flight/flight.css
@@ -88,3 +88,8 @@
   border-bottom: 1px solid var(--grey);
   margin-bottom: 1em;
 }
+
+.option-available {
+  color: var(--dark-blue);
+  font-weight: 500;
+}
